feat: Change `roomId` to `resurceId`

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       var options = {
         width: 900,
         height: 400,
-        roomId: 6173062192,
+        resourceId: 6173062192,
       };
       var player = new NimoTV.Player('player', options);
 
