--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
       };
       var player = new NimoTV.Player('player', options);
 
-      player.on(NimoTV.Player.ENDED, (data) => {
+      player.on(NimoTV.Player.ENDED, () => {
         // do something...
-        console.warn(data);
       });
 
       document.getElementById('play-btn').addEventListener('click', () => {
@@ -34,8 +33,16 @@
 
       document.getElementById('get-player-state-btn').addEventListener('click', () => {
         player.getState().then((data) => {
-          // do something...
+          // e.g. data = { state: 1 }
+          // Number definitions:
+          // -1, unstarted; video has not yet started playing,
+          // 0, ended; video has ended (either live or a vod video)
+          // 1, playing; video is playing
+          // 2, paused: video is paused
+          // 3, buffering: video is currently buffering
           console.warn(data);
+
+          // do something...
         });
       });
     </script>
