1. init document. 2. update example

--- a/example/index.html
+++ b/example/index.html
@@ -10,7 +10,7 @@
       <button id="play-btn">Play</button>
       <button id="get-player-state-btn">Get Player State</button>
     </div>
-    <script src="./dist/0.0.1/nimo-embed.js"></script>
+    <script src="../dist/embed-player-0.1.0.min.js"></script>
     <script>
       var options = {
         width: 900,
