--- a/example/index.html
+++ b/example/index.html
@@ -16,6 +16,7 @@
         width: 900,
         height: 400,
         resourceId: 6173062192,
+        lang: 1033
       };
       var player = new NimoTV.Player('player', options);
 
